Fixed select box on small resolutions.

--- a/app/assets/stylesheets/bills.scss
+++ b/app/assets/stylesheets/bills.scss
@@ -86,4 +86,8 @@
   .shop-navigation {
     font-size: 1em;
   }
+
+  select.elements-per-page {
+    padding: 0;
+  }
 }
